Changes for JDK 25/MacOS